@@ -441,7 +441,7 @@ int class_procfs_clean(void)
  * kernel patch */
 #include <linux/lustre_version.h>
 #ifdef LUSTRE_KERNEL_VERSION
-#define LUSTRE_MIN_VERSION 37
+#define LUSTRE_MIN_VERSION 45
 #define LUSTRE_MAX_VERSION 47
 #if (LUSTRE_KERNEL_VERSION < LUSTRE_MIN_VERSION)
 # error Cannot continue: Your Lustre kernel patch is older than the sources
